fixed icons shifting up while selecting

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,10 @@
 
 :where(.css-dev-only-do-not-override-1kf000u).ant-select-multiple  .ant-select-selection-overflow{
   overflow: hidden !important;
-  display: inline !important;
+  /* display: inline !important; */
+  display: flex;
+  flex-direction: row;
+  gap: 5px !important;
   width: 98% !important;
   /* height: 100% !important; */
 }
@@ -239,7 +242,9 @@ input:checked::before {
 
 :where(.css-1v613y0).ant-select-multiple .ant-select-selection-overflow{
   overflow: hidden !important;
-  display: inline !important;
+  display: flex;
+  flex-direction: row;
+  gap: 5px !important;
   width: 98% !important;
 }
 
